2006-12-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-event-time-regexp): Fix regexp.
	(mixi-event-title-regexp): Ditto.
	(mixi-event-owner-regexp): Ditto.
	(mixi-event-date-regexp): Ditto.
	(mixi-event-place-regexp): Ditto.
	(mixi-event-detail-regexp): Ditto.
	(mixi-event-limit-regexp): Ditto.
	(mixi-event-members-regexp): Ditto.
	(mixi-realize-event): Follow the change above.

2006-12-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (with-mixi-retrieve): Check whether on the login page
	strictly.

2006-12-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-realization-error): Use buffer variable only when it
	is bound and debug-on-error is t.

2006-12-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-realization-error): New error symbol.
	(mixi-realization-error): New macro.
	(mixi-realize-friend): Use it.
	(mixi-realize-diary): Ditto.
	(mixi-realize-community): Ditto.
	(mixi-realize-topic): Ditto.
	(mixi-realize-event): Ditto.
	(mixi-realize-message): Ditto.

2006-12-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-get-friends): Rename ARGS argument to FRIEND-OR-RANGE.
	(mixi-get-diaries): Ditto.
	(mixi-get-communities): Ditto.
	(mixi-get-messages): Rename ARGS argument to BOX-OR-RANGE.
	(mixi-get-introductions): Rename ARGS argument to FRIEND-OR-RANGE.

2006-12-19  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-object-realized-p): Rename from
	`mixi-object-realize-p'.
	(mixi-realize-friend): Rename from `mixi-friend-realize'.
	(mixi-friend-nick): Follow the change above.
	(mixi-friend-name): Ditto.
	(mixi-friend-sex): Ditto.
	(mixi-friend-address): Ditto.
	(mixi-friend-age): Ditto.
	(mixi-friend-birthday): Ditto.
	(mixi-friend-blood-type): Ditto.
	(mixi-friend-birthplace): Ditto.
	(mixi-friend-hobby): Ditto.
	(mixi-friend-job): Ditto.
	(mixi-friend-organization): Ditto.
	(mixi-friend-profile): Ditto.
	(mixi-realize-diary): Rename from `mixi-diary-realize'.
	(mixi-diary-time): Follow the change above.
	(mixi-diary-title): Ditto.