@@ -1,5 +1,11 @@
 2006-12-25  OHASHI Akira  <bg66@koka-in.org>
 
+	* sb-mixi.el (shimbun-get-headers): Use `mixi-bbs-p'.
+	(shimbun-mixi-get-comment-p): Abolish.
+	(shimbun-mixi-get-headers): Follow the change above.
+
+2006-12-25  OHASHI Akira  <bg66@koka-in.org>
+
 	* mixi.el (mixi-event-time-regexp): Fix regexp.
 	(mixi-event-title-regexp): Ditto.
 	(mixi-event-owner-regexp): Ditto.
